# v-api

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: releae.yml  renovate.json
.github/workflows/: build.yml  fmt.yml  license-check.yml  lint.yml  release.yml  test.yml
docs/migration/: migration-v0.4.adoc  migration-v0.4.md
dropshot-authorization-header/: Cargo.toml
dropshot-authorization-header/src/: basic.rs  bearer.rs
remix-auth-vapi/: README.md  package-lock.json  package.json  tsup.config.ts  vitest.config.ts
remix-auth-vapi/src/: client.test.ts  client.ts  index.ts  magic-link.test.ts  magic-link.ts  oauth.test.ts  oauth.ts  self.test.ts  self.ts  types.ts
remix-auth-vapi/test/: setup.ts
v-api/: Cargo.toml
v-api-installer/: Cargo.toml  build.rs
v-api-installer/src/: lib.rs  main.rs
v-api-param/: Cargo.toml
v-api-param/src/: lib.rs
v-api-permission-derive/: Cargo.toml
v-api-permission-derive/src/: lib.rs
v-api-permission-derive/tests/: derive.rs
v-api-permissions/: Cargo.toml
v-api-permissions/src/: lib.rs
v-api/src/: config.rs  context.rs  error.rs  initial_data.rs  lib.rs  messenger.rs  permissions.rs  secrets.rs  util.rs
v-api/src/authn/: jwt.rs  key.rs  mod.rs
v-api/src/context/: auth.rs  group.rs  link.rs  login.rs  magic_link.rs  mapping.rs  mod.rs  oauth.rs  saga.rs  user.rs
v-api/src/endpoints/: api_user.rs  api_user_provider.rs  group.rs  handlers.rs  mappers.rs  mod.rs  saga.rs
v-api/src/endpoints/login/: mod.rs
v-api/src/endpoints/login/local/: mod.rs
v-api/src/endpoints/login/magic_link/: client.rs  mod.rs
v-api/src/endpoints/login/oauth/: client.rs  code.rs  device_token.rs  github.rs  google.rs  mod.rs  zendesk.rs
v-api/src/endpoints/login/oauth/flow/: code.rs  device_token.rs  mod.rs
v-api/src/endpoints/login/oauth/remote/: github.rs  google.rs  mod.rs  zendesk.rs
v-api/src/endpoints/well_known/: mod.rs
v-api/src/hook/: mod.rs
v-api/src/mapper/: default.rs  email_address.rs  email_domain.rs  github_username.rs  mod.rs
v-api/tests/: import.rs
v-cli-sdk/: Cargo.toml
v-cli-sdk/src/: err.rs  lib.rs
v-cli-sdk/src/cmd/: mod.rs
v-cli-sdk/src/cmd/auth/: login.rs  mod.rs  oauth.rs  proxy.rs
v-cli-sdk/src/cmd/auth/oauth/: code.rs  device.rs  mod.rs
v-cli-sdk/src/cmd/config/: mod.rs
v-cli-sdk/src/printer/: mod.rs
v-model/: Cargo.toml  build.rs
v-model/migrations/2024-01-23-181727_api_user/: down.sql  up.sql
v-model/migrations/2024-01-23-181824_login_attempt/: up.sql
v-model/migrations/2024-01-23-181854_oauth_client/: down.sql  up.sql
v-model/migrations/2024-01-23-181913_access_group/: down.sql  up.sql
v-model/migrations/2024-01-23-182113_mappers/: down.sql  up.sql
v-model/migrations/2024-01-23-182531_link_request/: down.sql  up.sql
v-model/migrations/2024-02-14-042831_add_display_name/: down.sql
v-model/migrations/2024-08-01-212852_magic_link/: down.sql  up.sql
v-model/migrations/2024-08-02-144835_magic_link_attempt/: down.sql  up.sql
v-model/migrations/2024-11-16-015552_api_user_contact_email/: down.sql  up.sql
v-model/migrations/2024-12-04-180251_allow_null_mlink_scope/: down.sql  up.sql
v-model/migrations/2025-01-02-000000_nullable_login_attempt_redirect_uri/: down.sql
v-model/migrations/2025-05-18-150000_mapper_event/: down.sql  up.sql
v-model/migrations/2026-05-16-000000_add_device_code_fields/: down.sql  up.sql
v-model/migrations/2026-05-17-000000_nullable_login_attempt_redirect_uri/: up.sql
v-model/migrations/2026-05-18-150000_mapper_event/: up.sql
v-model/migrations/2026-05-26-000000_nullable_login_attempt_scope/: down.sql  up.sql
v-model/migrations/2026-05-28-000000_require_scope_on_attempts/: down.sql  up.sql
v-model/migrations/2026-06-11-000000_rename_access_groups_to_groups/: down.sql  up.sql
v-model/src/: db.rs  lib.rs  migrations.rs  permissions.rs  schema.rs  schema_ext.rs
v-model/src/saga/: db.rs  jsonschema.rs  mod.rs  postgres.rs  storage.rs  view.rs
v-model/src/saga/migrations/2026-05-19-172630_sagas/: down.sql  up.sql
v-model/src/storage/: mod.rs  postgres.rs
v-model/tests/: postgres.rs
xtask/: Cargo.toml
xtask/src/: main.rs
