[workspace]
members = [
  "v-api",
  "v-api-installer",
  "v-api-permission-derive",
  "v-model",
]
resolver = "2"

[workspace.dependencies]
async-bb8-diesel = { git = "https://github.com/oxidecomputer/async-bb8-diesel", branch = "bb8-0.9" }
async-trait = "0.1.89"
base64 = "0.22"
bb8 = "0.9"
chrono = "0.4.42"
cookie = { version = "0.18.1" }
crc32c = "0.6.8"
diesel = { version = "2.3.5", features = ["postgres"] }
diesel_migrations = { version = "2.3.1" }
dropshot = "0.16"
futures = "0.3.31"
google-cloudkms1 = "7.0.0"
heck = "0.5.0"
hex = "0.4.3"
http = "1"
http-body-util = "0.1.3"
hyper = "1.8.1"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
mockall = "0.14.0"
newtype-uuid = { version = "1.3.2", features = ["schemars08", "serde", "v4"] }
oauth2 = { version = "5.0.0", default-features = false, features = ["rustls-tls"] }
partial-struct = { git = "https://github.com/oxidecomputer/partial-struct" }
proc-macro2 = "1"
quote = "1"
rand = "0.9.2"
rand_core = "0.9"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream"] }
rsa = "0.9.10"
schemars = { version = "0.8.22", features = ["url"] }
secrecy = "0.10.3"
serde = "1.0.228"
serde_json = "1"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
syn = "2"
tap = "1.0.1"
thiserror = "2"
tokio = "1.49.0"
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
uuid = "1.19.0"
valuable = "0.1.1"
yup-oauth2 = "12.1.2"
