[workspace]
members = [
  "v-api",
  "v-api-installer",
  "v-api-param",
  "v-api-permission-derive",
  "v-model",
  "xtask"
]
resolver = "2"

[workspace.dependencies]
async-bb8-diesel = "0.3"
async-trait = "0.1.89"
base64 = "0.22"
bb8 = "0.9"
chrono = "0.4.43"
clap = { version = "4.6.0", features = ["derive", "string"] }
cookie = { version = "0.18.1" }
crc32c = "0.6.8"
diesel = { version = "2.3.7", features = ["postgres"] }
diesel_migrations = { version = "2.3.1" }
dropshot = "0.17"
futures = "0.3.32"
google-cloudkms1 = "7.0.0"
heck = "0.5.0"
hex = "0.4.3"
http = "1"
http-body-util = "0.1.3"
hyper = "1.8.1"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
mockall = "0.14.0"
newtype-uuid = { version = "1.3.2", features = ["schemars08", "serde", "v4"] }
oauth2 = { version = "5.0.0", default-features = false, features = ["rustls-tls"] }
oauth2-reqwest = "0.1.0-alpha.3"
partial-struct = { git = "https://github.com/oxidecomputer/partial-struct" }
percent-encoding = "2.3.2"
proc-macro2 = "1"
quote = "1"
rand = "0.8.5"
rand_core = "0.6"
regex = "1.12.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
rsa = "0.9.10"
schemars = { version = "0.8.22", features = ["url"] }
secrecy = "0.10.3"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1"
serde_urlencoded = "0.7.1"
sha2 = "0.11.0"
syn = "2"
tap = "1.0.1"
tempfile = "3"
thiserror = "2"
tokio = "1.50.0"
toml = "1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
uuid = "1.22.0"
valuable = "0.1.1"
yup-oauth2 = "12.1.2"
