[package]
name = "dropshot-authorization-header"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
dropshot = { workspace = true }
tracing = { workspace = true }
