[package]
name = "v-api-installer"
version = "0.1.0"
edition = "2021"

[lib]
name = "v_api_installer"
path = "src/lib.rs"

[[bin]]
name = "v-api-installer"
path = "src/main.rs"

[dependencies]
diesel = { workspace = true, features = ["postgres"] }
diesel_migrations = { workspace = true, features = ["postgres"] }
