[package]
name = "v-api-installer"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "v_api_installer"
path = "src/lib.rs"

[[bin]]
name = "v-api-installer"
path = "src/main.rs"

[dependencies]
diesel = { workspace = true, features = ["postgres", "r2d2"] }
diesel_migrations = { workspace = true, features = ["postgres"] }
