[package]
name = "v-api-param"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
