[package]
name = "v-api-permission-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "extra-traits", "parsing"] }
v-model = { path = "../v-model" }

[dev-dependencies]
newtype-uuid = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
v-api = { path = "../v-api" }
