[package]
name = "v-api-permission-derive"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[features]
default = []
sagas = []

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "extra-traits", "parsing"] }

[dev-dependencies]
chrono = { workspace = true }
newtype-uuid = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
v-api = { path = "../v-api" }
v-model = { path = "../v-model" }
