[package]
name = "v-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
cookie = { workspace = true }
crc32c = { workspace = true }
diesel = { workspace = true }
dropshot = { workspace = true }
dropshot-authorization-header = { path = "../dropshot-authorization-header" }
google-cloudkms1 = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true, features = ["http2"] }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
newtype-uuid = { workspace = true }
partial-struct = { workspace = true }
rand = { workspace = true, features = ["std"] }
rand_core = { workspace = true, features = ["std"] }
rsa = { workspace = true, features = ["sha2"] }
schemars = { workspace = true, features = ["chrono"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sha2 = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"]  }
v-api-permission-derive = { path = "../v-api-permission-derive" }
v-model = { path = "../v-model" }
yup-oauth2 = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
mockall = { workspace = true }
rsa = { workspace = true, features = ["pem"] }
v-model = { path = "../v-model", features = ["mock"] }

[package.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
