[package]
name = "v-model"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = ["mockall"]
sagas = ["steno"]

[dependencies]
async-bb8-diesel = { workspace = true }
async-trait = { workspace = true }
bb8 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
diesel = { workspace = true, features = ["chrono", "uuid", "serde_json"] }
mockall = { workspace = true, optional = true }
newtype-uuid = { workspace = true }
partial-struct = { workspace = true }
schemars = { workspace = true, features = ["chrono", "uuid1"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
steno = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"]  }

[dev-dependencies]
diesel_migrations = { version = "2.3.2", features = ["postgres"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
v-api-installer = { path = "../v-api-installer" }
